# FC_Consciousness

./: .gitignore  README.md  pyproject.toml
src/curbd_analysis/analysis/: curbd.py  fig10.py  fig11.py  fig2a_heatmap.py  fig2b_rasterplot.py  fig2c_curbd.py  fig3a_active_raincloud.py  fig3b_sem_neurons_baseline.py  fig3c_baseline_raincloud.py  fig3d_sem_neurons_active.py  fig6_pilot_analysis.py  fig_5_plot_simulations_outcome.py  simdata_utils.py
src/curbd_analysis/data/CurbdMagnitudes/: r14FearConditioningSleep.pkl  r14HabituationSleep.pkl  r14ProbeSleep.pkl  r20FearConditioningSleep.pkl  r20HabituationSleep.pkl  r20ProbeSleep.pkl
src/curbd_analysis/data/SleepScores/: r14HabituationSleep.pickle  r14ProbeSleep.pickle  r16FearConditioningSleep.pickle  r16HabituationSleep.pickle  r19ProbeSleep.pickle  r20FearConditioningSleep.pickle
src/curbd_analysis/data/TTLs/: r14ExtinctionTestSleep.pickle  r14ExtinctionTrainingSleep.pickle  r14HabituationSleep.pickle  r14ProbeSleep.pickle  r16FearConditioningSleep.pickle  r16HabituationSleep.pickle  r19HabituationSleep.pickle  (+4 more)
src/curbd_analysis/io/: config.py
src/curbd_analysis/plotting/: io.py  save.py
src/curbd_analysis/utils/: __init__.py  core.py  mapconvert.py
src/curbd_clean/analysis/: curbd.py  fig2a_heatmap.py  fig2b_rasterplot.py  fig2c_curbd.py  fig3a_active_raincloud.py  fig3b_sem_neurons_baseline.py  fig3c_baseline_raincloud.py  fig3d_sem_neurons_active.py  fig6_pilot_analysis.py  fig7.py  fig8.py  fig9.py  fig_5_plot_simulations_outcome.py  simdata_utils.py
src/curbd_clean/utils/: logging_setup.py  paths.py
(+775 files in other folders)
