[project]
name = "curbd-jp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "ptitprince>=0.3.1",
    "pyqt5>=5.15.11",
    "pyside2>=5.15.2.1",
    "ruff>=0.11.0",
    "scikit-learn>=1.6.1",
    "scikit-posthocs>=0.11.4",
    "scipy>=1.15.3",
    "seaborn>=0.11.0",
    "tqdm>=4.67.1",
]
